@@ -89,6 +89,10 @@ def not_empty_string(val):
     return None if val is None or len(val) == 0 else val
 
 
+def to_string_default_empty(val):
+    return "" if val is None else val
+
+
 def to_dbus_byte_array(val):
     return None if val is None else dbus.ByteArray(val.encode("utf-8"))
 
@@ -219,7 +223,7 @@ ipv4_params = [
 connection_params = [
     Param("connection.uuid", to_dbus=not_empty_string),
     Param("connection.id"),
-    Param("connection.interface-name", to_dbus=not_empty_string),
+    Param("connection.interface-name", to_dbus=not_empty_string, from_dbus=to_string_default_empty),
     Param("connection.autoconnect", from_dbus=to_bool_default_true),
 ]
 
@@ -388,10 +392,16 @@ class ModemConnection(Connection):
     def __init__(self) -> None:
         params = [
             Param("gsm.sim-slot", from_dbus=minus_one_is_none),
-            Param("gsm.auto-config", from_dbus=to_bool_default_false),
-            Param("gsm.apn"),
+            Param("gsm.apn", to_dbus=not_empty_string, from_dbus=to_string_default_empty),
         ]
         Connection.__init__(self, "gsm", METHOD_MODEM, params)
+
+    def set_dbus_options(self, con: DBUSSettings, iface: JSONSettings):
+        super().set_dbus_options(con, iface)
+        if con.get_opt("gsm.apn"):
+            con.set_value("gsm.auto-config", False)
+        else:
+            con.set_value("gsm.auto-config", True)
 
 
 def apply(iface, c_handler, network_manager: NetworkManager, dry_run: bool) -> bool:
